# playground

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  noxfile.py  pyproject.toml  release_notes.md  versions.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: blank.yml  ci.yml  labels.yml  publish.yml  release.yml  setup.yml  simple.yml  stale.yml  update-badges.yaml
1.1.4/: 404.html  index.html  objects.inv  sitemap.xml
1.1.4/changelog/: index.html
1.1.4/development/contributing/: index.html
1.1.4/development/releasing/: index.html
1.1.4/development/testing/: index.html
1.1.4/installation/: index.html
1.1.4/reference/api/core/: index.html
1.1.4/reference/cli/: index.html
1.1.4/search/: search_index.json
1.1.4/usage/commands/: index.html
1.1.4/usage/examples/: index.html
1.1.4/usage/quickstart/: index.html
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/changelog/: index.html
1.2.0/development/contributing/: index.html
1.2.0/development/releasing/: index.html
1.2.0/development/testing/: index.html
1.2.0/installation/: index.html
1.2.0/reference/api/core/: index.html
1.2.0/reference/cli/: index.html
1.2.0/search/: search_index.json
1.2.0/usage/commands/: index.html
1.2.0/usage/examples/: index.html
1.2.0/usage/quickstart/: index.html
changelog.d/: 1.added.md  3.changed.md
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/changelog/: index.html
dev/development/contributing/: index.html
dev/development/releasing/: index.html
dev/development/testing/: index.html
dev/installation/: index.html
dev/reference/api/: index.html
dev/reference/api/core/: index.html
dev/reference/cli/: index.html
dev/search/: search_index.json
dev/usage/commands/: index.html
dev/usage/examples/: index.html
dev/usage/quickstart/: index.html
docs/: changelog.md  index.md  installation.md
docs/development/: contributing.md  releasing.md  testing.md
docs/reference/: api.md
docs/reference/api/: core.md
docs/templates/: cli.yaml  cli_tree.json
scripts/: gen_cli_docs.py
src/resumake/: __main__.py
src/resumake/cli/: __init__.py
src/resumake/core/: __init__.py
src/sealkey/: __init__.py  __main__.py  __version__.pyi
src/sealkey/cli/: __init__.py
tests/: test_sample.py
