[build-system]
build-backend = "hatchling.build"

requires = ["hatch-vcs", "hatchling"]

[project]
name = "resumake"
description = "Make polished resumes from JSON with TeX"
readme = "README.md"
keywords = []
license = "MIT"
authors = [{ name = "Jitesh Sahani (JD)", email = "jitesh.sahani@outlook.com" }]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["typer~=0.17.3"]

optional-dependencies.docs = [
  "jinja2",
  "mike",
  "mkdocs",
  "mkdocs-autorefs",
  "mkdocs-gen-files",
  "mkdocs-macros-plugin",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
  "pymdown-extensions",
  "ruff",
  "towncrier",
]
optional-dependencies.tests = ["pytest>=8.3.5", "pytest-cov>=6.1.1"]
optional-dependencies.types = []
urls.Documentation = "https://github.com/jd-35656/resumake#readme"
urls.Issues = "https://github.com/jd-35656/resumake/issues"
urls.Source = "https://github.com/jd-35656/resumake"
scripts.resumake = "resumake.__main__:run"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.hatch.build.hooks.vcs]
version-file = "src/resumake/_version.py"

[tool.ruff]
target-version = "py311"
line-length = 121
src = ["src"]

format.indent-style = "space"
format.quote-style = "double"
format.skip-magic-trailing-comma = false
lint.select = [
  "A",
  "ARG",
  "B",
  "C4",
  "C9",
  "DTZ",
  "E",
  "F",
  "I",
  "ISC",
  "N",
  "PERF",
  "PGH",
  "PIE",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PYI",
  "Q",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T20",
  "UP",
  "W",
]
lint.per-file-ignores."tests/*" = ["N806", "S101", "S106"]
lint.isort.known-first-party = ["resumake"]
lint.mccabe.max-complexity = 15

[tool.codespell]
skip = ".git,venv,__pycache__,.mypy_cache,.ruff_cache"
check-hidden = true
quiet-level = 2

[tool.pytest.ini_options]
minversion = "8.0"
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-config", "--strict-markers"]

[tool.coverage.run]
source_pkgs = ["resumake", "tests"]
branch = true
parallel = true
omit = ["src/resumake/_version.py"]

[tool.coverage.paths]
resumake = ["src/resumake", "*/resumake/src/resumake"]
tests = ["tests", "*/resumake/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
fail_under = 0

[tool.towncrier]
directory = "changelog.d"
filename = "docs/changelog.md"
package = "resumake"
start_string = "<!-- BEGIN RELEASED CHANGELOG -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/twisted/my-project/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/twisted/my-project/issues/{issue})"

[[tool.towncrier.type]]
name = "Security"

[[tool.towncrier.type]]
name = "Removed"

[[tool.towncrier.type]]
name = "Deprecated"

[[tool.towncrier.type]]
name = "Added"

[[tool.towncrier.type]]
name = "Changed"

[[tool.towncrier.type]]
name = "Fixed"

[tool.mypy]
files = ["src", "tests"]
ignore_missing_imports = true
strict = true
